force-app/main/default/objects/Bulk_Record_Upload_Chunk__c/fields/FailureCount__c.field-meta.xml
<CustomField><fullName
  >FailureCount__c</fullName><description
  >Stores the number of failed rows in this completed chunk so finalization does not reparse result CSV.</description><label
  >Failure Count</label><inlineHelpText
  >System-calculated failed row count for this staging chunk.</inlineHelpText><precision
  >5</precision><scale>0</scale><type>Number</type></CustomField>