force-app/main/default/objects/Bulk_Record_Upload_Chunk__c/fields/FirstCsvRow__c.field-meta.xml
<CustomField>
  <fullName>FirstCsvRow__c</fullName>
  <description
  >Stores the first one-based physical CSV data-row number represented by this chunk.</description>
  <inlineHelpText
  >Shows the first input row represented by this chunk.</inlineHelpText>
  <label>First CSV Row</label>
  <precision>5</precision>
  <required>true</required>
  <scale>0</scale>
  <type>Number</type>
</CustomField>