force-app/main/default/objects/Bulk_Record_Upload_Chunk__c/fields/IntegrityChecksum__c.field-meta.xml
<CustomField>
  <fullName>IntegrityChecksum__c</fullName>
  <description
  >Stores the SHA-256 checksum used to detect staging corruption before processing.</description>
  <inlineHelpText
  >System-managed integrity value for this chunk.</inlineHelpText>
  <label>Integrity Checksum</label>
  <length>64</length>
  <required>true</required>
  <type>Text</type>
</CustomField>