force-app/main/default/objects/Bulk_Record_Upload_Chunk__c/fields/ParentUpload__c.field-meta.xml
<CustomField><fullName
  >ParentUpload__c</fullName><description
  >Links this staging fragment to its parent Bulk Record Upload for parent-controlled access and cleanup.</description><inlineHelpText
  >Identifies the upload that owns this chunk.</inlineHelpText><label
  >Parent Upload</label><referenceTo
  >Bulk_Record_Upload__c</referenceTo><relationshipLabel
  >Upload Chunks</relationshipLabel><relationshipName
  >UploadChunks</relationshipName><relationshipOrder
  >0</relationshipOrder><reparentableMasterDetail
  >false</reparentableMasterDetail><type
  >MasterDetail</type><writeRequiresMasterRead
  >false</writeRequiresMasterRead></CustomField>