force-app/main/default/objects/Bulk_Record_Upload_Chunk__c/fields/ProcessingOrder__c.field-meta.xml
<CustomField>
  <fullName>ProcessingOrder__c</fullName>
  <description
  >Stores the zero-based processing order for this bounded staging fragment.</description>
  <inlineHelpText
  >Shows this chunk's processing order within its upload.</inlineHelpText>
  <label>Processing Order</label>
  <precision>3</precision>
  <required>true</required>
  <scale>0</scale>
  <type>Number</type>
</CustomField>