force-app/main/default/objects/Bulk_Record_Upload_Chunk__c/fields/StagedRowData__c.field-meta.xml
<CustomField>
  <fullName>StagedRowData__c</fullName>
  <description
  >Stores one bounded serialized staging fragment for guarded asynchronous processing and prompt cleanup.</description>
  <inlineHelpText
  >System-managed staging content. Do not edit or expose through ordinary user surfaces.</inlineHelpText>
  <label>Staged Row Data</label>
  <length>131072</length>
  <type>LongTextArea</type>
</CustomField>