force-app/main/default/objects/Bulk_Record_Upload_Chunk__c/fields/Status__c.field-meta.xml
<CustomField>
  <fullName>Status__c</fullName>
  <description
  >Stores the internal bounded chunk processing state used for recovery and cleanup.</description>
  <inlineHelpText>System-managed staging status.</inlineHelpText>
  <label>Processing Status</label>
  <required>true</required>
  <type>Picklist</type>
  <valueSet>
    <restricted>true</restricted>
    <valueSetDefinition>
      <value>
        <fullName>READY</fullName>
        <default>true</default>
        <label>Ready</label>
      </value>
      <value>
        <fullName>PROCESSING</fullName>
        <label>Processing</label>
      </value>
      <value>
        <fullName>COMPLETED</fullName>
        <label>Completed</label>
      </value>
      <value>
        <fullName>FAILED</fullName>
        <label>Failed</label>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>