force-app/main/default/objects/Bulk_Record_Upload_Chunk__c/fields/SuccessCount__c.field-meta.xml
<CustomField><fullName
  >SuccessCount__c</fullName><description
  >Stores the number of successful rows in this completed chunk so finalization does not reparse result CSV.</description><label
  >Success Count</label><inlineHelpText
  >System-calculated successful row count for this staging chunk.</inlineHelpText><precision
  >5</precision><scale>0</scale><type>Number</type></CustomField>